--- a/schunk_sdh_ros/package.xml
+++ b/schunk_sdh_ros/package.xml
@@ -32,5 +32,6 @@
   <depend>trajectory_msgs</depend>
   <depend>urdf</depend>
   <depend>sdhlibrary_cpp</depend>
+  <depend>schunk_sdh</depend>
 
 </package>
