--- a/schunk_bringup/sdh/config/sdh.yaml
+++ b/schunk_bringup/sdh/config/sdh.yaml
@@ -1,7 +1,7 @@
 sdhdevicetype: TCP
-sdhdevicestring: 192.168.1.42
+sdhdevicestring: 172.31.1.154
 sdhport: 23
 baudrate: 100000
-joint_names: ['sdh_knuckle_joint', 'sdh_thumb_2_joint', 'sdh_thumb_3_joint', 'sdh_finger_12_joint', 'sdh_finger_13_joint', 'sdh_finger_22_joint', 'sdh_finger_23_joint']
+joint_names: ['schunk_right_knuckle_joint', 'schunk_right_thumb_2_joint', 'schunk_right_thumb_3_joint', 'schunk_right_finger_12_joint', 'schunk_right_finger_13_joint', 'schunk_right_finger_22_joint', 'schunk_right_finger_23_joint']
 OperationMode: position
 frequency: 100
